Change to Java 21